--- a/TARge20/appsettings.json
+++ b/TARge20/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=TARge20;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server= DESKTOP-LR6E60O\\SQLEXPRESS ;Database=FirmaDB;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
